# leetcode

./: .clang-format  .clang-tidy  .gitignore  .nvim.lua  1039.html  CMakeLists.txt  CMakePresets.json  fourier.py  primes.ipynb  primes.py  primes_polar.py
0449_serialize_and_desrialize_bst/: CMakeLists.txt
benchmarks/abstract_iteration_benchmark/: CMakeLists.txt  abstract_iteration_benchmark.cpp
code/: CMakeLists.txt
code/0001_two_sum/: 0001_two_sum_tests.cpp  CMakeLists.txt
code/0003_maximum_substring_without_repeating_characters/: 0003_maximum_substring_without_repeating_characters.hpp  CMakeLists.txt
code/0010/: 0010.hpp  0010.json  0010_mono.hpp  0010_test_cases.hpp  0010_tests.cpp  CMakeLists.txt
code/0015_3sum/: 0015_3sum.hpp  0015_3sum_tests.cpp  CMakeLists.txt
code/0016_3sum_closest/: 0016_3sum_closest.hpp  0016_3sum_closest_tests.cpp  CMakeLists.txt
code/0017_letter_combinations_of_a_phone_number/: 0017_letter_combinations_of_a_phone_number.hpp  0017_letter_combinations_of_a_phone_number_tests.cpp  CMakeLists.txt
code/0018_4sum/: 0018_4sum.hpp  0018_4sum_tests.cpp  CMakeLists.txt
code/0019_remove_nth_node_from_end_of_list/: 0019_remove_nth_node_from_end_of_list.hpp  0019_remove_nth_node_from_end_of_list_tests.cpp  CMakeLists.txt
code/001_two_sum/: 001_two_sum.hpp  001_two_sum_tests.cpp  CMakeLists.txt
code/0022_generate_parentheses/: 0022_generate_parentheses.hpp  0022_generate_parentheses_tests.cpp  CMakeLists.txt
code/0023_merge_k_sorted_lists/: 0023_merge_k_sorted_lists.hpp  0023_merge_k_sorted_lists_tests.cpp  CMakeLists.txt
code/0024_swap_nodes_in_pairs/: 0024_swap_nodes_in_pairs.hpp  0024_swap_nodes_in_pairs_tests.cpp  CMakeLists.txt
code/0025_reverse_nodes_in_k_group/: 0025_reverse_nodes_in_k_group.hpp  CMakeLists.txt
code/0029_divide_two_integers/: 0029_divide_two_integers.hpp  0029_divide_two_integers_benchmark.cpp  0029_divide_two_integers_msb.hpp  0029_divide_two_integers_tests.cpp  CMakeLists.txt  random_data.hpp
code/0033/: 0033.hpp  0033.json  0033_mono.hpp  0033_test_cases.hpp  0033_tests.cpp  CMakeLists.txt
code/0036_valid_sudoku/: 0036_valid_sudoku.hpp  CMakeLists.txt
code/0037_sudoku_solver/: 0037_sudoku_solver.hpp  0037_sudoku_solver_iterative.hpp  0037_sudoku_solver_iterative_mono..hpp  0037_sudoku_solver_mono..hpp  0037_sudoku_solver_recursive.hpp  0037_sudoku_solver_tests.cpp  CMakeLists.txt
code/0039_combination_sum/: 0039_benchmark.cpp  0039_combination_sum.hpp  0039_combination_sum_2.hpp  0039_combination_sum_3.hpp  0039_combination_sum_tests.cpp  CMakeLists.txt
code/0043_multiply_strings/: 0043_multiply_strings.hpp  0043_multiply_strings_tests.cpp  CMakeLists.txt
code/0045_jump_game_2/: 0045_jump_game_2.hpp  0045_jump_game_2_tests.cpp  CMakeLists.txt
code/0046_permutations/: 0046_permutations.hpp  0046_permutations_tests.cpp  0046_permutationstest_cases.hpp  CMakeLists.txt
code/0048/: 0048.hpp  0048.json  0048_test_cases.hpp  0048_tests.cpp  CMakeLists.txt
code/0049_group_anagrams/: 0049_group_anagrams.hpp  0049_group_anagrams_tests.cpp  CMakeLists.txt
code/0051_n_queens_1/: 0051_n_queens_1.hpp  0051_n_queens_1_mono..hpp  0051_n_queens_1_tests.cpp  CMakeLists.txt
code/0052_n_queens_2/: 0052_n_queens_2.hpp  0052_n_queens_2_mono..hpp  0052_n_queens_2_tests.cpp  CMakeLists.txt
code/0053_maximum_subarray/: 0053_maximum_subarray.hpp  0053_maximum_subarray_tests.cpp  CMakeLists.txt
code/0054_spiral_matrix/: 0054_spiral_matrix.hpp  0054_spiral_matrix_tests.cpp  CMakeLists.txt
code/0055_jump_game/: 0055_jump_game.hpp  0055_jump_game_tests.cpp  CMakeLists.txt
code/0059_spiral_matrix_2/: 0059_spiral_matrix_2.hpp  0059_spiral_matrix_2_tests.cpp  CMakeLists.txt
code/0061/: 0061.hpp  0061.json  0061_mono.hpp  0061_test_cases.hpp  0061_tests.cpp  CMakeLists.txt
code/0062_unique_paths/: 0062_unique_paths.hpp  0062_unique_paths_tests.cpp  CMakeLists.txt
code/0063_unique_paths_2/: 0063_unique_paths_2.hpp  0063_unique_paths_2_tests.cpp  CMakeLists.txt
code/0064_minimum_path_sum_2/: 0064_minimum_path_sum_2.hpp  0064_minimum_path_sum_2_tests.cpp  CMakeLists.txt
code/0065_valid_number/: 0065_valid_number.hpp  0065_valid_number_tests.cpp  CMakeLists.txt  text.md
code/0066_plus_one/: 0066_plus_one.hpp  0066_plus_one_tests.cpp  CMakeLists.txt
code/0067_add_binary/: 0067_add_binary.hpp  0067_add_binary_tests.cpp  CMakeLists.txt
code/0068_text_justification/: 0068_text_justification.hpp  0068_text_justification_tests.cpp  CMakeLists.txt
code/0070_climbing_stairs/: 0070_climbing_stairs.hpp  0070_climbing_stairs_tests.cpp  CMakeLists.txt
code/0072_edit_distance/: 0072_edit_distance.hpp  0072_edit_distance_tests.cpp  CMakeLists.txt
code/0073_set_matrix_zeroes/: 0073_set_matrix_zeroes.hpp  CMakeLists.txt
code/0075_sort_colors/: 0075_sort_colors.hpp  0075_sort_colors_tests.cpp  CMakeLists.txt
code/0078_subsets/: 0078_subsets.hpp  0078_subsets_mono.hpp  0078_subsets_tests.cpp  0078_subsetstest_cases.hpp  CMakeLists.txt
code/0085_maximal_rectangle/: 0085_maximal_rectangle.hpp  0085_maximal_rectangle_tests.cpp  CMakeLists.txt
code/0091_decode_ways/: 0091_decode_ways.hpp  (+2 more)
templates/: CMakeLists.txt  all_equal_to.hpp  assign_max.hpp  bisect.hpp  bitset_128.hpp  bitset_heap.hpp  bitset_priority_queue.hpp  bitset_test.cpp  bitsets.hpp  branchless_max.hpp  branchless_max_test.cpp  bump_allocator.hpp  bump_hash_map.hpp  bump_hash_set.hpp  bump_map.hpp  bump_multiset.hpp  bump_set.hpp  bump_vector.hpp  cast.hpp  cast_view.hpp  ceil_div.hpp  compose.hpp  coro.hpp  count_zeroes.hpp  count_zeroes_test.cpp  dsw.hpp  empty.hpp  exch.hpp  factorial_64.hpp  factorizer.hpp  fenwick_tree.hpp  force_inline.hpp  full.hpp  functional.hpp  gcd.hpp  hash_set.hpp  hash_set_tests.cpp  heap_with_erase.hpp  hier_bitset.hpp  hier_bitset_tests.cpp  (+51 more)
test_utility/: CMakeLists.txt  convert_expected_type.hpp  leet_code_binary_tree.hpp  leet_code_list.hpp  leet_code_unidirected_graph.hpp  parse_2d_array.hpp  path_helper.cpp  path_helper.hpp  random_strings.hpp  scan.hpp  test_cases_helpers.hpp  test_utility.hpp
(+2353 files in other folders)
