cmake_minimum_required(VERSION 3.25)

add_subdirectory(0001_two_sum)
add_subdirectory(0015_3sum)
add_subdirectory(0016_3sum_closest)
add_subdirectory(0017_letter_combinations_of_a_phone_number)
add_subdirectory(0018_4sum)
add_subdirectory(0019_remove_nth_node_from_end_of_list)
add_subdirectory(0022_generate_parentheses)
add_subdirectory(0023_merge_k_sorted_lists)
add_subdirectory(0039_combination_sum)
add_subdirectory(0043_multiply_strings)
add_subdirectory(0049_group_anagrams)
add_subdirectory(0054_spiral_matrix)
add_subdirectory(0059_spiral_matrix_2)
add_subdirectory(0068_text_justification)
add_subdirectory(0073_set_matrix_zeroes)
add_subdirectory(0075_sort_colors)
add_subdirectory(0112_path_sum)
add_subdirectory(0113_path_sum_2)
add_subdirectory(0116_populating_next_right_pointers_in_each_node)
add_subdirectory(0117_populating_next_right_pointers_in_each_node_2)
add_subdirectory(0124_binary_tree_maximum_path_sum)
add_subdirectory(0133_clone_graph)
add_subdirectory(0148_sort_list)
add_subdirectory(0199_binary_tree_right_side_view)
add_subdirectory(0204_count_primes)
add_subdirectory(0235_lowest_common_ancestor_of_binary_search_tree)
add_subdirectory(0236_lowest_common_ancestor_of_a_binary_tree)
add_subdirectory(0238_product_of_array_except_self)
add_subdirectory(0242_valid_anagram)
add_subdirectory(0257_binary_tree_paths)
add_subdirectory(0258_add_digits)
add_subdirectory(0263_ugly_number)
add_subdirectory(0264_nth_ugly_number)
add_subdirectory(0273_integer_to_english_words)
add_subdirectory(0279_perfect_squares)
add_subdirectory(0282_expression_add_operators)
add_subdirectory(0289_game_of_life)
add_subdirectory(0297_srialize_and_desrialize_binary_tree)
add_subdirectory(0301_remove_invalid_parentheses)
add_subdirectory(0313_super_ugly_number)
add_subdirectory(0324_wiggle_sort_2)
add_subdirectory(0412_fizz_buzz)
add_subdirectory(0415_add_strings)
add_subdirectory(0437_path_sum_3)
add_subdirectory(0438_find_all_anagrams_in_a_string)
add_subdirectory(0449_serialize_and_desrialize_bst)
add_subdirectory(0494_target_sum)
add_subdirectory(0495_teemo_attacking)
add_subdirectory(0498_diagonal_traverse)
add_subdirectory(0537_complex_number_multiplication)
add_subdirectory(0543_diameter_of_binary_tree)
add_subdirectory(0560_subarray_sum_equals_k)
add_subdirectory(0566_reshape_the_matrix)
add_subdirectory(0567_permutation_in_string)
add_subdirectory(0592_fraction_addition_and_subtraction)
add_subdirectory(0640_solve_the_equation)
add_subdirectory(0657_robot_return_to_origin)
add_subdirectory(0680_valid_palindrome)
add_subdirectory(0682_baseball_game)
add_subdirectory(0687_longest_univalue_path)
add_subdirectory(0735_asteroid_collision)
add_subdirectory(0749_contain_virus)
add_subdirectory(0874_walking_robot_simulation)
add_subdirectory(0885_spiral_matrix_3)
add_subdirectory(0946_validate_stack_sequences)
add_subdirectory(0953_verifying_an_alien_dictionary)
add_subdirectory(0965_univalued_binary_tree)
add_subdirectory(0973_k_closest_points_to_origin)
add_subdirectory(0988_smallest_string_starting_from_leaf)
add_subdirectory(1201_ugly_number_3)
add_subdirectory(1249_minimum_remove_to_make_valid_parentheses)
add_subdirectory(1550_three_consequtive_odds)
add_subdirectory(1851_largest_color_value_in_a_directed_graph)
add_subdirectory(1916_count_ways_to_build_ant_colony)
add_subdirectory(1931_painting_a_grid_with_tree_different_colors)
add_subdirectory(2094_finding_3_digit_even_numbers)
add_subdirectory(2096_step_by_step_directions_from_a_binary_tree_node_to_another)
add_subdirectory(2225_find_players_with_zero_or_one_losses)
add_subdirectory(2246_longest_path_with_different_adjacent_characters)
add_subdirectory(2273_find_resultant_array_after_removing_anagrams)
add_subdirectory(2326_spiral_matrix_4)
add_subdirectory(2427_number_of_common_factors)
add_subdirectory(2509_cycle_length_queries_in_a_tree)
add_subdirectory(2514_count_anagrams)
add_subdirectory(2761_prime_pairs_with_target_sum)
add_subdirectory(2787_ways_to_express_an_integer_as_sums_of_powers)
add_subdirectory(2900_longest_unequal_adjacent_groups_subsequence)
add_subdirectory(2901_longest_unequal_adjacent_groups_subsequence_2)
add_subdirectory(2918_minimum_equal_sum_of_two_arrays_after_replacing_zeros)
add_subdirectory(3233_find_the_count_of_numbers_which_are_not_special)
add_subdirectory(3335_total_characters_in_string_after_transformations_1)
add_subdirectory(3337_total_characters_in_string_after_transformations_2)
