cmake_minimum_required(VERSION 3.25)

add_subdirectory(0001_two_sum)
add_subdirectory(0015_3sum)
add_subdirectory(0016_3sum_closest)
add_subdirectory(0017_letter_combinations_of_a_phone_number)
add_subdirectory(0018_4sum)
add_subdirectory(0019_remove_nth_node_from_end_of_list)
add_subdirectory(0022_generate_parentheses)
add_subdirectory(0023_merge_k_sorted_lists)
add_subdirectory(0039_combination_sum)
add_subdirectory(0043_multiply_strings)
add_subdirectory(0049_group_anagrams)
add_subdirectory(0054_spiral_matrix)
add_subdirectory(0059_spiral_matrix_2)
add_subdirectory(0068_text_justification)
add_subdirectory(0073_set_matrix_zeroes)
add_subdirectory(0075_sort_colors)
add_subdirectory(0112_path_sum)
add_subdirectory(0113_path_sum_2)
add_subdirectory(0116_populating_next_right_pointers_in_each_node)
add_subdirectory(0117_populating_next_right_pointers_in_each_node_2)
add_subdirectory(0124_binary_tree_maximum_path_sum)
add_subdirectory(0133_clone_graph)
add_subdirectory(0135_candy)
add_subdirectory(0148_sort_list)
add_subdirectory(0199_binary_tree_right_side_view)
add_subdirectory(0204_count_primes)
add_subdirectory(0209_minimum_size_subarray_sum)
add_subdirectory(0218_the_skyline_problem)
add_subdirectory(0235_lowest_common_ancestor_of_binary_search_tree)
add_subdirectory(0236_lowest_common_ancestor_of_a_binary_tree)
add_subdirectory(0238_product_of_array_except_self)
add_subdirectory(0242_valid_anagram)
add_subdirectory(0257_binary_tree_paths)
add_subdirectory(0258_add_digits)
add_subdirectory(0263_ugly_number)
add_subdirectory(0264_nth_ugly_number)
add_subdirectory(0273_integer_to_english_words)
add_subdirectory(0279_perfect_squares)
add_subdirectory(0282_expression_add_operators)
add_subdirectory(0289_game_of_life)
add_subdirectory(0292_nim_game)
add_subdirectory(0297_srialize_and_desrialize_binary_tree)
add_subdirectory(0301_remove_invalid_parentheses)
add_subdirectory(0307_range_sum_query_mutable)
add_subdirectory(0313_super_ugly_number)
add_subdirectory(0319_bulb_switcher)
add_subdirectory(0324_wiggle_sort_2)
add_subdirectory(0368_lexicographical_numbers)
add_subdirectory(0412_fizz_buzz)
add_subdirectory(0415_add_strings)
add_subdirectory(0437_path_sum_3)
add_subdirectory(0438_find_all_anagrams_in_a_string)
add_subdirectory(0440_kth_smallest_in_lexicographical_order)
add_subdirectory(0449_serialize_and_desrialize_bst)
add_subdirectory(0494_target_sum)
add_subdirectory(0495_teemo_attacking)
add_subdirectory(0498_diagonal_traverse)
add_subdirectory(0537_complex_number_multiplication)
add_subdirectory(0543_diameter_of_binary_tree)
add_subdirectory(0560_subarray_sum_equals_k)
add_subdirectory(0566_reshape_the_matrix)
add_subdirectory(0567_permutation_in_string)
add_subdirectory(0592_fraction_addition_and_subtraction)
add_subdirectory(0594_longest_harmonious_subsequence)
add_subdirectory(0640_solve_the_equation)
add_subdirectory(0657_robot_return_to_origin)
add_subdirectory(0680_valid_palindrome)
add_subdirectory(0682_baseball_game)
add_subdirectory(0687_longest_univalue_path)
add_subdirectory(0735_asteroid_collision)
add_subdirectory(0749_contain_virus)
add_subdirectory(0830_positions_of_large_groups)
add_subdirectory(0832_flipping_an_image)
add_subdirectory(0844_backspace_string_compare)
add_subdirectory(0867_transpose_matrix)
add_subdirectory(0874_walking_robot_simulation)
add_subdirectory(0885_spiral_matrix_3)
add_subdirectory(0909_snakes_and_ladders)
add_subdirectory(0921_minimum_add_to_make_parentheses_valid)
add_subdirectory(0946_validate_stack_sequences)
add_subdirectory(0950_reveal_cards_in_increasing_order)
add_subdirectory(0953_verifying_an_alien_dictionary)
add_subdirectory(0965_univalued_binary_tree)
add_subdirectory(0973_k_closest_points_to_origin)
add_subdirectory(0985_sum_of_even_numbers_after_queries)
add_subdirectory(0987_vertical_order_traversal_of_a_binary_tree)
add_subdirectory(0988_smallest_string_starting_from_leaf)
add_subdirectory(0999_available_captures_for_rook)
add_subdirectory(1006_clumsy_factorial)
add_subdirectory(1041_robot_bounded_in_circle)
add_subdirectory(1061_lexicographically_smallest_equivalent_string)
add_subdirectory(1094_car_pooling)
add_subdirectory(1103_distribute_candies_to_people)
add_subdirectory(1201_ugly_number_3)
add_subdirectory(1222_queen_that_can_attack_the_king)
add_subdirectory(1249_minimum_remove_to_make_valid_parentheses)
add_subdirectory(1252_cells_with_odd_values_in_a_matrix)
add_subdirectory(1260_shift_2d_grid)
add_subdirectory(1275_find_winner_on_a_tic_tac_toe_game)
add_subdirectory(1298_maximum_candies_you_can_get_from_boxes)
add_subdirectory(1324_print_words_vertically)
add_subdirectory(1389_create_target_array_in_the_given_order)
add_subdirectory(1404_number_of_steps_to_reduce_a_number_to_one)
add_subdirectory(1409_queries_on_a_permutation_with_key)
add_subdirectory(1432_max_difference_you_can_get_from_changing_an_integer)
add_subdirectory(1441_build_an_array_with_stack_operations)
add_subdirectory(1498_number_of_subsequences_that_satisfy_the_given_sum_condition)
add_subdirectory(1503_last_momemnt_before_all_ants_fall_out_of_a_plank)
add_subdirectory(1518_water_bottles)
add_subdirectory(1535_find_the_winner_of_an_array_game)
add_subdirectory(1545_find_kth_bit_in_nth_binary_string)
add_subdirectory(1550_three_consequtive_odds)
add_subdirectory(1560_most_visited_sector_in_a_circular_track)
add_subdirectory(1562_find_latest_group_of_size_m)
add_subdirectory(1583_count_unhappy_friends)
add_subdirectory(1599_maximum_profit_of_operating_a_cantennial_wheel)
add_subdirectory(1603_design_parking_system)
add_subdirectory(1646_get_maximum_in_generated_array)
add_subdirectory(1680_concatenation_of_consecutive_binary_numbers)
add_subdirectory(1688_count_of_matches_in_tournament)
add_subdirectory(1700_number_of_students_unable_to_eat)
add_subdirectory(1701_average_waiting_time)
add_subdirectory(1706_where_will_the_ball_fall)
add_subdirectory(1801_number_of_orders_in_the_backlog)
add_subdirectory(1806_minumum_number_of_operations_to_reinitialize_a_permutation)
add_subdirectory(1823_find_the_winner_of_the_circular_game)
add_subdirectory(1851_largest_color_value_in_a_directed_graph)
add_subdirectory(1860_incremental_memory_leak)
add_subdirectory(1894_find_the_student_that_will_replace_the_chalk)
add_subdirectory(1910_remove_all_occurences_of_a_substring)
add_subdirectory(1914_cyclically_rotating_a_grid)
add_subdirectory(1916_count_ways_to_build_ant_colony)
add_subdirectory(1920_build_array_from_permutation)
add_subdirectory(1929_concatenation_of_array)
add_subdirectory(1931_painting_a_grid_with_tree_different_colors)
add_subdirectory(1945_sum_of_digits_of_string_after_convert)
add_subdirectory(2011_final_value_of_variable_after_performing_operations)
add_subdirectory(2014_longest_subsequence_repeated_k_times)
add_subdirectory(2016_maximum_difference_between_increasing_elements)
add_subdirectory(2022_convert_1d_array_into_2d_array)
add_subdirectory(2028_find_missing_observations)
add_subdirectory(2043_simple_bank_system)
add_subdirectory(2056_number_of_valid_move_combinations_on_chessboard)
add_subdirectory(2069_walking_the_robot)
add_subdirectory(2073_time_needed_to_buy_tickets)
add_subdirectory(2075_decode_the_slanted_ciphertext)
add_subdirectory(2079_watering_plants)
add_subdirectory(2081_sum_of_k_mirror_numbers)
add_subdirectory(2094_finding_3_digit_even_numbers)
add_subdirectory(2096_step_by_step_directions_from_a_binary_tree_node_to_another)
add_subdirectory(2099_find_subsequence_of_length_k_with_largest_sum)
add_subdirectory(2105_watering_plants_2)
add_subdirectory(2109_adding_spaces_to_a_string)
add_subdirectory(2120_execution_of_all_suffix_instructions_staying_in_a_grid)
add_subdirectory(2131_longest_palindrome_by_concatenating_two_letter_words)
add_subdirectory(2138_divide_the_string_into_groups_of_size_k)
add_subdirectory(2149_rearrange_array_elements_by_sign)
add_subdirectory(2154_keep_multiplying_found_values_by_two)
add_subdirectory(2161_partition_array_according_to_given_pivot)
add_subdirectory(2200_find_all_k_distant_indices_in_an_array)
add_subdirectory(2225_find_players_with_zero_or_one_losses)
add_subdirectory(2240_kth_smallest_product_of_two_sorted_arrays)
add_subdirectory(2246_longest_path_with_different_adjacent_characters)
add_subdirectory(2273_find_resultant_array_after_removing_anagrams)
add_subdirectory(2294_partition_array_such_that_maximum_difference_is_k)
add_subdirectory(2311_longest_binary_subsequence_less_than_or_equal_to_k)
add_subdirectory(2326_spiral_matrix_4)
add_subdirectory(2359_find_closest_node_to_given_two_nodes)
add_subdirectory(2427_number_of_common_factors)
add_subdirectory(2434_using_a_robot_to_print_the_lexicographically_smallest_string)
add_subdirectory(2509_cycle_length_queries_in_a_tree)
add_subdirectory(2514_count_anagrams)
add_subdirectory(2566_maximum_difference_by_remapping_a_digit)
add_subdirectory(2616_minimize_the_maximum_difference_of_pairs)
add_subdirectory(2761_prime_pairs_with_target_sum)
add_subdirectory(2787_ways_to_express_an_integer_as_sums_of_powers)
add_subdirectory(2894_divisible_and_non_divisible_sums_difference)
add_subdirectory(2900_longest_unequal_adjacent_groups_subsequence)
add_subdirectory(2901_longest_unequal_adjacent_groups_subsequence_2)
add_subdirectory(2918_minimum_equal_sum_of_two_arrays_after_replacing_zeros)
add_subdirectory(2929_distribute_candies_among_children)
add_subdirectory(2942_find_words_containing_character)
add_subdirectory(2966_divide_array_into_arrays_with_max_difference)
add_subdirectory(3024_type_of_triangle)
add_subdirectory(3068_find_the_maximum_sum_of_node_values)
add_subdirectory(3085_minimum_deleteions_to_make_string_k_special)
add_subdirectory(3170_lexicographically_minimum_string_after_removing_stars)
add_subdirectory(3233_find_the_count_of_numbers_which_are_not_special)
add_subdirectory(3335_total_characters_in_string_after_transformations_1)
add_subdirectory(3337_total_characters_in_string_after_transformations_2)
add_subdirectory(3355_zero_array_transformations_1)
add_subdirectory(3362_zero_array_transformation_3)
add_subdirectory(3372_maximize_the_number_of_target_nodes_after_connecting_trees_1)
add_subdirectory(3373_maximize_the_number_of_target_nodes_after_connecting_trees_2)
add_subdirectory(3403_find_the_lexicographically_largest_string_from_the_box_1)
add_subdirectory(3405_count_the_number_of_arrays_with_k_matching_adjacent_elements)
add_subdirectory(3423_maximum_difference_between_adjacent_elements_in_a_circular_array)
add_subdirectory(3442_maximum_difference_between_even_and_odd_frequency_1)
add_subdirectory(3443_maximum_manhattan_distance_after_k_changes)
add_subdirectory(3445_maximum_difference_between_even_and_odd_frequency_2)
