cmake_minimum_required(VERSION 3.25)

add_subdirectory(0001_two_sum)
add_subdirectory(0003_maximum_substring_without_repeating_characters)
add_subdirectory(0015_3sum)
add_subdirectory(0016_3sum_closest)
add_subdirectory(0017_letter_combinations_of_a_phone_number)
add_subdirectory(0018_4sum)
add_subdirectory(0019_remove_nth_node_from_end_of_list)
add_subdirectory(0022_generate_parentheses)
add_subdirectory(0023_merge_k_sorted_lists)
add_subdirectory(0024_swap_nodes_in_pairs)
add_subdirectory(0025_reverse_nodes_in_k_group)
add_subdirectory(0036_valid_sudoku)
add_subdirectory(0037_sudoku_solver)
add_subdirectory(0039_combination_sum)
add_subdirectory(0043_multiply_strings)
add_subdirectory(0049_group_anagrams)
add_subdirectory(0054_spiral_matrix)
add_subdirectory(0059_spiral_matrix_2)
add_subdirectory(0065_valid_number)
add_subdirectory(0068_text_justification)
add_subdirectory(0073_set_matrix_zeroes)
add_subdirectory(0075_sort_colors)
add_subdirectory(0112_path_sum)
add_subdirectory(0113_path_sum_2)
add_subdirectory(0116_populating_next_right_pointers_in_each_node)
add_subdirectory(0117_populating_next_right_pointers_in_each_node_2)
add_subdirectory(0118_pascals_triangle)
add_subdirectory(0119_pascals_triangle_2)
add_subdirectory(0124_binary_tree_maximum_path_sum)
add_subdirectory(0128_longest_consecutive_sequence)
add_subdirectory(0133_clone_graph)
add_subdirectory(0135_candy)
add_subdirectory(0148_sort_list)
add_subdirectory(0165_compare_version_numbers)
add_subdirectory(0174_dungeon_game)
add_subdirectory(0199_binary_tree_right_side_view)
add_subdirectory(0202_happy_number)
add_subdirectory(0204_count_primes)
add_subdirectory(0209_minimum_size_subarray_sum)
add_subdirectory(0218_the_skyline_problem)
add_subdirectory(0231_power_of_two)
add_subdirectory(0235_lowest_common_ancestor_of_binary_search_tree)
add_subdirectory(0236_lowest_common_ancestor_of_a_binary_tree)
add_subdirectory(0238_product_of_array_except_self)
add_subdirectory(0242_valid_anagram)
add_subdirectory(0257_binary_tree_paths)
add_subdirectory(0258_add_digits)
add_subdirectory(0263_ugly_number)
add_subdirectory(0264_nth_ugly_number)
add_subdirectory(0268_missing_number)
add_subdirectory(0273_integer_to_english_words)
add_subdirectory(0274_h_index)
add_subdirectory(0279_perfect_squares)
add_subdirectory(0282_expression_add_operators)
add_subdirectory(0289_game_of_life)
add_subdirectory(0292_nim_game)
add_subdirectory(0297_srialize_and_desrialize_binary_tree)
add_subdirectory(0301_remove_invalid_parentheses)
add_subdirectory(0307_range_sum_query_mutable)
add_subdirectory(0313_super_ugly_number)
add_subdirectory(0318_maximum_product_of_word_lengths)
add_subdirectory(0319_bulb_switcher)
add_subdirectory(0324_wiggle_sort_2)
add_subdirectory(0326_power_of_three)
add_subdirectory(0342_power_of_four)
add_subdirectory(0368_lexicographical_numbers)
add_subdirectory(0378_kth_smallest_element_in_a_sorted_matrix)
add_subdirectory(0412_fizz_buzz)
add_subdirectory(0415_add_strings)
add_subdirectory(0437_path_sum_3)
add_subdirectory(0438_find_all_anagrams_in_a_string)
add_subdirectory(0440_kth_smallest_in_lexicographical_order)
add_subdirectory(0449_serialize_and_desrialize_bst)
add_subdirectory(0455_assign_cookies)
add_subdirectory(0494_target_sum)
add_subdirectory(0495_teemo_attacking)
add_subdirectory(0498_diagonal_traverse)
add_subdirectory(0537_complex_number_multiplication)
add_subdirectory(0543_diameter_of_binary_tree)
add_subdirectory(0560_subarray_sum_equals_k)
add_subdirectory(0566_reshape_the_matrix)
add_subdirectory(0567_permutation_in_string)
add_subdirectory(0592_fraction_addition_and_subtraction)
add_subdirectory(0594_longest_harmonious_subsequence)
add_subdirectory(0640_solve_the_equation)
add_subdirectory(0657_robot_return_to_origin)
add_subdirectory(0679_24_game)
add_subdirectory(0680_valid_palindrome)
add_subdirectory(0682_baseball_game)
add_subdirectory(0687_longest_univalue_path)
add_subdirectory(0735_asteroid_collision)
add_subdirectory(0749_contain_virus)
add_subdirectory(0808_soup_servings)
add_subdirectory(0830_positions_of_large_groups)
add_subdirectory(0832_flipping_an_image)
add_subdirectory(0837_new_game)
add_subdirectory(0844_backspace_string_compare)
add_subdirectory(0867_transpose_matrix)
add_subdirectory(0869_reordered_power_of_2)
add_subdirectory(0874_walking_robot_simulation)
add_subdirectory(0885_spiral_matrix_3)
add_subdirectory(0898_bitwise_ORs_of_subarrays)
add_subdirectory(0904_fruit_into_baskets)
add_subdirectory(0909_snakes_and_ladders)
add_subdirectory(0921_minimum_add_to_make_parentheses_valid)
add_subdirectory(0946_validate_stack_sequences)
add_subdirectory(0950_reveal_cards_in_increasing_order)
add_subdirectory(0953_verifying_an_alien_dictionary)
add_subdirectory(0965_univalued_binary_tree)
add_subdirectory(0966_vowel_spellcheck)
add_subdirectory(0973_k_closest_points_to_origin)
add_subdirectory(0985_sum_of_even_numbers_after_queries)
add_subdirectory(0987_vertical_order_traversal_of_a_binary_tree)
add_subdirectory(0988_smallest_string_starting_from_leaf)
add_subdirectory(0999_available_captures_for_rook)
add_subdirectory(1006_clumsy_factorial)
add_subdirectory(1041_robot_bounded_in_circle)
add_subdirectory(1061_lexicographically_smallest_equivalent_string)
add_subdirectory(1094_car_pooling)
add_subdirectory(1103_distribute_candies_to_people)
add_subdirectory(1116_print_zero_even_odd)
add_subdirectory(1117_building_h2o)
add_subdirectory(1195_fizz_buzz_multithreaded)
add_subdirectory(1201_ugly_number_3)
add_subdirectory(1222_queen_that_can_attack_the_king)
add_subdirectory(1233_remove_sub_folders_from_the_filesystem)
add_subdirectory(1249_minimum_remove_to_make_valid_parentheses)
add_subdirectory(1252_cells_with_odd_values_in_a_matrix)
add_subdirectory(1260_shift_2d_grid)
add_subdirectory(1275_find_winner_on_a_tic_tac_toe_game)
add_subdirectory(1277_count_square_submatrices_with_all_ones)
add_subdirectory(1290_convert_binary_number_in_a_linked_list_to_integer)
add_subdirectory(1298_maximum_candies_you_can_get_from_boxes)
add_subdirectory(1304_find_n_unique_integers_sum_up_to_zero)
add_subdirectory(1317_convert_integer_to_the_sum_of_two_no_zero_integers)
add_subdirectory(1317_number_of_people_aware_of_a_secret)
add_subdirectory(1323_maximum_64_number)
add_subdirectory(1324_print_words_vertically)
add_subdirectory(1325_delete_leaves_with_a_given_value)
add_subdirectory(1337_the_k_weakest_rows_in_a_matrix)
add_subdirectory(1353_maximum_number_of_events_that_can_be_attended)
add_subdirectory(1389_create_target_array_in_the_given_order)
add_subdirectory(1394_find_lucky_integer_in_an_array)
add_subdirectory(1404_number_of_steps_to_reduce_a_number_to_one)
add_subdirectory(1409_queries_on_a_permutation_with_key)
add_subdirectory(1432_max_difference_you_can_get_from_changing_an_integer)
add_subdirectory(1441_build_an_array_with_stack_operations)
add_subdirectory(1493_longest_subarray_of_ones_after_deleting_one_element)
add_subdirectory(1498_number_of_subsequences_that_satisfy_the_given_sum_condition)
add_subdirectory(1503_last_momemnt_before_all_ants_fall_out_of_a_plank)
add_subdirectory(1504_count_submatrices_with_all_ones)
add_subdirectory(1518_water_bottles)
add_subdirectory(1535_find_the_winner_of_an_array_game)
add_subdirectory(1545_find_kth_bit_in_nth_binary_string)
add_subdirectory(1550_three_consequtive_odds)
add_subdirectory(1560_most_visited_sector_in_a_circular_track)
add_subdirectory(1562_find_latest_group_of_size_m)
add_subdirectory(1583_count_unhappy_friends)
add_subdirectory(1599_maximum_profit_of_operating_a_cantennial_wheel)
add_subdirectory(1603_design_parking_system)
add_subdirectory(1646_get_maximum_in_generated_array)
add_subdirectory(1680_concatenation_of_consecutive_binary_numbers)
add_subdirectory(1688_count_of_matches_in_tournament)
add_subdirectory(1695_maximum_erasure_value)
add_subdirectory(1700_number_of_students_unable_to_eat)
add_subdirectory(1701_average_waiting_time)
add_subdirectory(1706_where_will_the_ball_fall)
add_subdirectory(1717_maximum_score_from_removing_substrings)
add_subdirectory(1733_minimum_number_of_people_to_teach)
add_subdirectory(1751_maximum_number_of_events_that_can_be_attended_2)
add_subdirectory(1792_maximum_average_pass_ratio)
add_subdirectory(1801_number_of_orders_in_the_backlog)
add_subdirectory(1806_minumum_number_of_operations_to_reinitialize_a_permutation)
add_subdirectory(1823_find_the_winner_of_the_circular_game)
add_subdirectory(1838_frequency_of_the_most_frequent_element)
add_subdirectory(1851_largest_color_value_in_a_directed_graph)
add_subdirectory(1860_incremental_memory_leak)
add_subdirectory(1865_finding_pairs_with_a_certain_sum)
add_subdirectory(1894_find_the_student_that_will_replace_the_chalk)
add_subdirectory(1900_the_earliest_and_latest_rounds_where_players_compete)
add_subdirectory(1910_remove_all_occurences_of_a_substring)
add_subdirectory(1912_design_movie_rental_system)
add_subdirectory(1914_cyclically_rotating_a_grid)
add_subdirectory(1916_count_ways_to_build_ant_colony)
add_subdirectory(1920_build_array_from_permutation)
add_subdirectory(1922_count_good_numbers)
add_subdirectory(1929_concatenation_of_array)
add_subdirectory(1931_painting_a_grid_with_tree_different_colors)
add_subdirectory(1935_maximum_number_of_words_you_can_type)
add_subdirectory(1945_sum_of_digits_of_string_after_convert)
add_subdirectory(1948_delete_duplicate_folders_in_system)
add_subdirectory(1957_delete_characters_to_make_fancy_string)
add_subdirectory(2011_final_value_of_variable_after_performing_operations)
add_subdirectory(2014_longest_subsequence_repeated_k_times)
add_subdirectory(2016_maximum_difference_between_increasing_elements)
add_subdirectory(2022_convert_1d_array_into_2d_array)
add_subdirectory(2028_find_missing_observations)
add_subdirectory(2043_simple_bank_system)
add_subdirectory(2044_count_number_of_maximum_bitwise_or_subsets)
add_subdirectory(2056_number_of_valid_move_combinations_on_chessboard)
add_subdirectory(2069_walking_the_robot)
add_subdirectory(2073_time_needed_to_buy_tickets)
add_subdirectory(2075_decode_the_slanted_ciphertext)
add_subdirectory(2079_watering_plants)
add_subdirectory(2081_sum_of_k_mirror_numbers)
add_subdirectory(2094_finding_3_digit_even_numbers)
add_subdirectory(2096_step_by_step_directions_from_a_binary_tree_node_to_another)
add_subdirectory(2099_find_subsequence_of_length_k_with_largest_sum)
add_subdirectory(2105_watering_plants_2)
add_subdirectory(2106_maximum_fruits_harvested_after_at_most_k_steps)
add_subdirectory(2109_adding_spaces_to_a_string)
add_subdirectory(2120_execution_of_all_suffix_instructions_staying_in_a_grid)
add_subdirectory(2131_longest_palindrome_by_concatenating_two_letter_words)
add_subdirectory(2138_divide_the_string_into_groups_of_size_k)
add_subdirectory(2149_rearrange_array_elements_by_sign)
add_subdirectory(2154_keep_multiplying_found_values_by_two)
add_subdirectory(2161_partition_array_according_to_given_pivot)
add_subdirectory(2163_minimum_difference_in_sums_after_removal_of_elements)
add_subdirectory(2197_replace_non_coprime_numbers_in_array)
add_subdirectory(2200_find_all_k_distant_indices_in_an_array)
add_subdirectory(2210_count_hills_and_valleys_in_an_array)
add_subdirectory(2221_find_triangular_sum_of_an_array)
add_subdirectory(2225_find_players_with_zero_or_one_losses)
add_subdirectory(2240_kth_smallest_product_of_two_sorted_arrays)
add_subdirectory(2246_longest_path_with_different_adjacent_characters)
add_subdirectory(2264_largest_3_same_digit_number_in_string)
add_subdirectory(2273_find_resultant_array_after_removing_anagrams)
add_subdirectory(2294_partition_array_such_that_maximum_difference_is_k)
add_subdirectory(2311_longest_binary_subsequence_less_than_or_equal_to_k)
add_subdirectory(2322_minimum_score_after_removals_on_a_tree)
add_subdirectory(2326_spiral_matrix_4)
add_subdirectory(2348_number_of_zero_filled_subarrays)
add_subdirectory(2353_design_a_food_rating_system)
add_subdirectory(2359_find_closest_node_to_given_two_nodes)
add_subdirectory(2402_meeting_rooms_3)
add_subdirectory(2410_maximum_matching_of_players_with_trainers)
add_subdirectory(2411_smallest_subarrays_with_maximum_bitwise_or)
add_subdirectory(2419_longest_subarray_with_maximum_bitwise_and)
add_subdirectory(2427_number_of_common_factors)
add_subdirectory(2434_using_a_robot_to_print_the_lexicographically_smallest_string)
add_subdirectory(2438_range_produce_queries_of_powers)
add_subdirectory(2509_cycle_length_queries_in_a_tree)
add_subdirectory(2514_count_anagrams)
add_subdirectory(2561_rearranging_fruits)
add_subdirectory(2563_count_the_number_of_fair_pairs)
add_subdirectory(2566_maximum_difference_by_remapping_a_digit)
add_subdirectory(2575_find_the_divisibility_array_of_a_string)
add_subdirectory(2616_minimize_the_maximum_difference_of_pairs)
add_subdirectory(2749_minimum_operations_to_make_the_integer_zero)
add_subdirectory(2761_prime_pairs_with_target_sum)
add_subdirectory(2785_sort_vowels_in_a_string)
add_subdirectory(2787_ways_to_express_an_integer_as_sums_of_powers)
add_subdirectory(2894_divisible_and_non_divisible_sums_difference)
add_subdirectory(2900_longest_unequal_adjacent_groups_subsequence)
add_subdirectory(2901_longest_unequal_adjacent_groups_subsequence_2)
add_subdirectory(2918_minimum_equal_sum_of_two_arrays_after_replacing_zeros)
add_subdirectory(2929_distribute_candies_among_children)
add_subdirectory(2942_find_words_containing_character)
add_subdirectory(2966_divide_array_into_arrays_with_max_difference)
add_subdirectory(3000_maximum_area_of_longest_diagonal_rectangle)
add_subdirectory(3005_count_elements_with_maximum_frequency)
add_subdirectory(3021_alice_and_bob_playing_flower_game)
add_subdirectory(3024_type_of_triangle)
add_subdirectory(3025_find_the_number_of_ways_to_place_people_1)
add_subdirectory(3027_find_the_number_of_ways_to_place_people_2)
add_subdirectory(3068_find_the_maximum_sum_of_node_values)
add_subdirectory(3085_minimum_deleteions_to_make_string_k_special)
add_subdirectory(3170_lexicographically_minimum_string_after_removing_stars)
add_subdirectory(3195_find_the_minimum_area_to_cover_all_ones_1)
add_subdirectory(3197_find_the_minimum_area_to_cover_all_ones_2)
add_subdirectory(3201_find_the_maximum_length_of_valid_subsequence_1)
add_subdirectory(3202_find_the_maximum_length_of_valid_subsequence_2)
add_subdirectory(3227_vowels_game_in_a_string)
add_subdirectory(3233_find_the_count_of_numbers_which_are_not_special)
add_subdirectory(3270_find_the_key_of_the_numbers)
add_subdirectory(3304_find_kth_character_in_string_game_1)
add_subdirectory(3307_find_kth_character_in_string_game)
add_subdirectory(3330_find_the_original_typed_string_1)
add_subdirectory(3333_find_the_original_typed_string_2)
add_subdirectory(3335_total_characters_in_string_after_transformations_1)
add_subdirectory(3337_total_characters_in_string_after_transformations_2)
add_subdirectory(3346_maximum_frequency_of_an_element_after_performing_operations_i)
add_subdirectory(3347_maximum_frequency_of_an_element_after_performing_operations_ii)
add_subdirectory(3355_zero_array_transformations_1)
add_subdirectory(3362_zero_array_transformation_3)
add_subdirectory(3363_find_the_maximum_number_of_fruits_collected)
add_subdirectory(3372_maximize_the_number_of_target_nodes_after_connecting_trees_1)
add_subdirectory(3373_maximize_the_number_of_target_nodes_after_connecting_trees_2)
add_subdirectory(3403_find_the_lexicographically_largest_string_from_the_box_1)
add_subdirectory(3405_count_the_number_of_arrays_with_k_matching_adjacent_elements)
add_subdirectory(3408_design_task_manager)
add_subdirectory(3423_maximum_difference_between_adjacent_elements_in_a_circular_array)
add_subdirectory(3439_reschedule_meetings_for_maximum_free_time)
add_subdirectory(3440_reschedule_meetings_for_maximum_free_time_2)
add_subdirectory(3442_maximum_difference_between_even_and_odd_frequency_1)
add_subdirectory(3443_maximum_manhattan_distance_after_k_changes)
add_subdirectory(3445_maximum_difference_between_even_and_odd_frequency_2)
add_subdirectory(3446_sort_matrix_by_diagonals)
add_subdirectory(3459_length_of_longest_v_shaped_diagonal_segment)
add_subdirectory(3477_fruits_into_baskets_2)
add_subdirectory(3479_fruits_into_baskets_3)
add_subdirectory(3480_maximize_subarrays_after_removing_one_conflicting_pair)
add_subdirectory(3484_design_spreadsheet)
add_subdirectory(3487_maximum_unique_subarray_sum_after_deletion)
add_subdirectory(3495_minimum_operations_to_make_array_zero)
add_subdirectory(3508_implement_router)
add_subdirectory(3515_find_closest_person)
add_subdirectory(3541_find_most_frequent_vewel_and_consonant)
